--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,26 @@
 version: '3.8'
 
 services:
+  service:
+    container_name: service_todo_app
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    environment:
+      DB_PASSWORD: 1234
+      POSTGRES_USER: postgres
+      POSTGRES_DATABASE: postgres
+      POSTGRES_SSL: disable
+      SERVER_PORT: 8080
+      POSTGRES_PORT: 5432
+      POSTGRES_HOST: postgres
+      SERVER_HOST: 0.0.0.0
+    ports:
+      - "8080:8080"
+    depends_on:
+      postgres:
+        condition: service_healthy
+
   postgres:
     container_name: postgres_todo_app
     image: postgres
@@ -13,6 +33,13 @@ services:
     ports:
       - "5432:5432"
     restart: unless-stopped
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-U", "root", "-d", "postgres" ]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 5s
+
 
 volumes:
   postgres:
