--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,8 @@ services:
       POSTGRES_PORT: 5432
       POSTGRES_HOST: postgres
       SERVER_HOST: 0.0.0.0
+      SALT: "kasjgfeiuysaocjna,biljkjabdm,czmlwIU"
+      SIGNING_KEY: "askjfbw,m.mvxlichig,.nclkhsdjdlkuybcvb"
     ports:
       - "8080:8080"
     depends_on:
