--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,16 +7,16 @@ services:
       context: .
       dockerfile: ./Dockerfile
     environment:
-      DB_PASSWORD: 1234
-      POSTGRES_USER: postgres
-      POSTGRES_DATABASE: postgres
-      POSTGRES_SSL: disable
-      SERVER_PORT: 8080
-      POSTGRES_PORT: 5432
-      POSTGRES_HOST: postgres
-      SERVER_HOST: 0.0.0.0
-      SALT: "kasjgfeiuysaocjna,biljkjabdm,czmlwIU"
-      SIGNING_KEY: "askjfbw,m.mvxlichig,.nclkhsdjdlkuybcvb"
+      - DB_PASSWORD=1234
+      - POSTGRES_USER=postgres
+      - POSTGRES_DATABASE=postgres
+      - POSTGRES_SSL=disable
+      - SERVER_PORT=8080
+      - POSTGRES_PORT=5432
+      - POSTGRES_HOST=postgres
+      - SERVER_HOST=0.0.0.0
+      - SALT=kasjgfeiuysaocjna,biljkjabdm,czmlwIU
+      - SIGNING_KEY=askjfbw,m.mvxlichig,.nclkhsdjdlkuybcvb
     ports:
       - "8080:8080"
     depends_on:
@@ -36,7 +36,7 @@ services:
       - "5432:5432"
     restart: unless-stopped
     healthcheck:
-      test: [ "CMD", "pg_isready", "-U", "root", "-d", "postgres" ]
+      test: [ "CMD", "pg_isready", "-U", "postgres", "-d", "postgres" ]
       interval: 10s
       retries: 5
       start_period: 30s
