--- a/.golangci.yml
+++ b/.golangci.yml
@@ -18,5 +18,5 @@ linters:
     - ineffassign   # Поиск неинициализированных переменных
     - goconst       # Проверка на повторяющиеся строковые/числовые значения
     - gofmt         # Автоформатирование
-    - revive
+    - revive        # Расширенный стиль-контроль
     - goimports
