--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,5 @@
+image: golang:1.24
+
 stages:
   - lint
   - test
@@ -23,11 +25,13 @@ build:
     - name: docker:24.0.5-dind
       command: ["--privileged"]
   variables:
-    DOCKER_HOST: "tcp://localhost:2375"
+    DOCKER_HOST: "tcp://127.0.0.1:2375"
     DOCKER_TLS_CERTDIR: ""
     DOCKER_DRIVER: "overlay2"
+    DOCKERD_ROOTLESS_ROOTLESSKIT_PORT_DRIVER: "slirp4netns"
+
   script:
     - sleep 15
-    - nc -zv localhost 2375
+    - nc -zv 127.0.0.1 2375
     - docker info
     - docker build -t service_todo_app -f ./Dockerfile .
