--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,8 @@
 image: golang:1.24
 
 services:
-  - docker:24.0.5-dind
-
+  - name: docker:24.0.5-dind
+    alias: docker
 stages:
 #  - lint
 #  - test
