--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,8 +1,5 @@
 image: golang:1.24
 
-services:
-  - name: docker:24.0.5-dind
-    alias: docker
 stages:
 #  - lint
 #  - test
@@ -23,6 +20,7 @@ stages:
 
 deploy:
   stage: deploy
+  image: docker:24.0.5
   script:
     - apt-get update && apt-get install -y curl
     - curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
