--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,23 @@ image: golang:1.24
 stages:
 #  - lint
 #  - test
-  - deploy
+  - build
+
+
+default:
+  image: docker:24.0.5
+  services:
+    - docker:24.0.5-dind
+  before_script:
+    - docker info
+
+variables:
+  DOCKER_TLS_CERTDIR: "/certs"
+
+build:
+  stage: build
+  script:
+    - docker build -t todo_app -f ./Dockerfile .
 
 #lint:
 #  stage: lint
@@ -18,27 +34,5 @@ stages:
 #  script:
 #    - go test -v ./...
 
-deploy:
-  stage: deploy
-  image: docker:24.0.5-dind
-  services:
-    - name: docker:24.0.5-dind
-      alias: docker
-  script:
-    # Устанавливаем необходимые утилиты, включая curl
-    - apt-get update && apt-get install -y curl
-
-    # Скачиваем и устанавливаем Docker Compose
-    - curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-    - chmod +x /usr/local/bin/docker-compose
-
-    # Проверяем версию Docker Compose
-    - docker-compose --version
-
-    # Устанавливаем переменную окружения DOCKER_HOST для подключения к Docker daemon
-    - export DOCKER_HOST=tcp://docker:2375
-
-    # Запускаем контейнеры с Docker Compose
-    - docker-compose up -d --build
 
 
