--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,9 @@
 ##  - test
 #  - build
 
-variables:
-  DOCKER_HOST: tcp://docker:2375
+#variables:
+#  DOCKER_HOST: tcp://docker:2375
+#  DOCKER_TLS_CERTDIR: ""
 
 build:
   stage: build
